--- a/Kotlin/RoomDatabase-master/app/src/main/AndroidManifest.xml
+++ b/Kotlin/RoomDatabase-master/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.learn2crack.retrofitkotlin">
-
-    <uses-permission android:name="android.permission.INTERNET" />
+    package="com.codility.roomdatabase">
 
     <application
         android:allowBackup="true"
@@ -13,7 +11,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="Kotlin Retrofit"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddActivity"></activity>
+
+        <activity
+            android:name=".AddActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
