--- a/Kotlin/ConstraintLayout/app/src/main/AndroidManifest.xml
+++ b/Kotlin/ConstraintLayout/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.zaynannisa.serviceanother">
+    package="com.example.zaynannisa.constraintlayout">
 
     <application
         android:allowBackup="true"
@@ -16,7 +16,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".LocalWordService" android:label="Word Service"/>
     </application>
 
 </manifest>
